# DiGiT-DIM

./: ARCHITECTURE.md  README.md  model.py
digit_dim/: __init__.py
digit_dim/pipeline/: __init__.py  block.py  exceptions.py  model_argument.py  transflow.py
harmonic_llm/: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  benchmark_results.json  pyproject.toml  requirements-dev.txt  requirements.txt
harmonic_llm/.github/workflows/: ci.yml
harmonic_llm/configs/: base.yaml  large.yaml  small.yaml  tiny.yaml
harmonic_llm/docs/: BACKLOG.md  PERSIAN_RESULTS.md
harmonic_llm/harmonic_llm/: __init__.py  _core.py  builder.py  cli.py  config.py  training.py
harmonic_llm/scripts/: benchmark.py  fetch_persian.py  train_persian.py
harmonic_llm/tests/: test_checkpoint.py  test_default_path.py  test_generation.py  test_mla.py  test_model.py  test_tokenizer.py
tests/: test_model_args_bugfix.py  test_model_py_compiles.py  test_pipeline.py  test_q_conversion_helpers.py
