[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "harmonic-llm"
version = "0.1.0"
description = "A transformer LM with HarmonicFlow feed-forward, ZeroMass projections, and Sinkhorn HC mixing"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "Harmonic-LLM contributors"}]
keywords = ["transformer", "llm", "mixture-of-experts", "optimal-transport", "deep-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "ruff>=0.1", "black>=23.0"]
crypto = ["cryptography>=41.0"]
vision = ["pillow>=10.0"]

[project.urls]
Homepage = "https://github.com/harmonic-llm/harmonic-llm"
Repository = "https://github.com/harmonic-llm/harmonic-llm"

[project.scripts]
harmonic-llm = "harmonic_llm.cli:main"

[tool.setuptools.packages.find]
include = ["harmonic_llm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
